public/style/findPods.css
/*Based on code from Rob Vermeer at https://codepen.io/RobVermeer/pen/japZpY */

.tinder {
  width: 100vw;
  height: 75vh;
  display: grid;
  grid-template-rows: 90% 10%;
  opacity: 0;
  transition: opacity 0.1s ease-in-out;
  display: flex;
  flex-direction: column;
}

.tinder--stack {
  flex: 1;
  display: flex;
  flex-direction: column-reverse;
}

.tinder--buttons {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  padding: 16px;
  z-index: 2;
}

.loaded.tinder {
  opacity: 1;
}

.tinder--cards {
  flex-grow: 1;
  text-align: center;
  display: flex;
  justify-content: center;
  z-index: 1;
  grid-row: 1;
  height: 90%;
  position: relative;
  z-index: 1;
}

.behind-stack {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 0;
}

.behind-stack-message {
  color: white;
  display: flex;
  flex-direction: column;
  text-align: left;
}

.tinder--card {
  display: inline-block;
  width: 90vw;
  max-width: 400px;
  height: 75vh;
  background: #FFFFFF;
  padding-bottom: 40px;
  border-radius: 20px;
  overflow: hidden;
  position: absolute;
  will-change: transform;
  transition: all 0.3s ease-in-out;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
  /* box-shadow: (horizonal) (vertical) (blur radius) (rgb) */
}

.moving.tinder--card {
  transition: none;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.tinder--card img {
  max-width: 100%;
  pointer-events: none;
}

.tinder--card h3 {
  margin-top: 32px;
  font-size: 32px;
  padding: 0 16px;
  pointer-events: none;
  display: flex;
  justify-content: center;
  text-align: center;
}

.tinder--card p {
  margin-top: 24px;
  font-size: 20px;
  padding: 0 16px;
  pointer-events: none;
  display: flex;
  justify-content: center;
  text-align: center;
}

.empty-message {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 1.2rem;
  color: #ffffff;
  margin-top: 20px;
  height: 100%;
  /* Ensure the message takes up the full height of the parent element */
}

.button-container {
  margin-top: 10px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.tinder--buttons {
  padding-top: 1vh;
  grid-row: 2;
  position: relative;
  bottom: 30%;
}

.tinder--buttons button {
  border-radius: 20px;
  line-height: 15%;
  width: 60px;
  height: 60px;
  border: 0;
  display: inline-block;
  margin: 0 8px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
}

.tinder--buttons button:focus {
  outline: 0;
}

.tinder--buttons i {
  font-size: 32px;
  vertical-align: middle;
  text-align: center;
  display: flex;
  justify-content: center;
}

.nope {
  color: white;
  width: auto;
  background: linear-gradient(180deg, #f3666f, #DF2935);
  border-radius: 100%;
}

.love {
  color: white;
  width: auto;
  background: linear-gradient(360deg, #3fb191, #02c78f);
  border-radius: 100%;
}


@keyframes swipe-right-and-fade-in {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

